<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--  文件名称  -->
        <androidx.cardview.widget.CardView
            android:id="@+id/profile_name_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/location_detail_profile_name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:hint="@string/location_detail_profile_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/location_profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--  Wifi 列表  -->
        <androidx.cardview.widget.CardView
            android:id="@+id/wifi_list_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/wifi_title"
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_weight="2"
                        android:text="@string/location_detail_wifi_info" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/refresh_wifi_information_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#BDCCE85A"
                        app:srcCompat="@android:drawable/ic_popup_sync" />
                </LinearLayout>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_wifi_enabled"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wifi_state"
                    tools:layout_editor_absoluteX="4dp" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connected_wifi" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_weight="1"
                        android:hint="@string/ssid">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/connected_wifi_ssid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_weight="1"
                        android:hint="@string/mac">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/connected_wifi_mac"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wifi_scan_results" />

                <LinearLayout
                    android:id="@+id/wifi_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:layout_editor_absoluteX="4dp" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/add_wifi_item_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_input_add" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--  基站信息  -->
        <androidx.cardview.widget.CardView
            android:id="@+id/telephone_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/telephone_title"
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_weight="2"
                        android:text="@string/location_detail_telephone_info" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/refresh_telephone_information_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#BDCCE85A"
                        app:srcCompat="@android:drawable/ic_popup_sync" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/telephone_information_list_view"
      android:padding="4dp"              android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- 定位信息 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/gnss_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/gnss_title"
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_weight="2"
                        android:text="@string/location_detail_gnss_info" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/refresh_gnss_information_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#BDCCE85A"
                        app:srcCompat="@android:drawable/ic_popup_sync" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_weight="1"
                        android:hint="Latitude">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/latitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_weight="1"
                        android:hint="Longitude">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/longitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <ImageButton
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="4dp"
            android:gravity="end"
            app:srcCompat="@android:drawable/ic_menu_save" />
    </LinearLayout>
</ScrollView>
